src/grammar.bnf
program ::= instruction program_rest 
program_rest ::= instruction program_rest | 

instruction ::= assign_stmt | cursor | circle | line_to | move_to

cursor ::= IDENTIFIER CURSOR COLOR NUMBER NUMBER 
assign_stmt ::= IDENTIFIER ASSIGN NUMBER 
circle ::= IDENTIFIER ASSIGN CIRCLE NUMBER
line_to ::= IDENTIFIER LINE_TO NUMBER NUMBER
move_to ::= IDENTIFIER MOVE_TO NUMBER NUMBER

COLOR ::= "red" | "blue" | "green" | "black" | "yellow"
IDENTIFIER ::= <letter> (<letter> | <digit>)*
NUMBER ::= <digit>+
ASSIGN ::= "="
NEQ ::= "!="
GREATER_THAN ::= ">"
LOWER_THAN ::= "<"
CURSOR ::= "cursor"
CIRCLE ::= "circle"
LINE_TO ::= "line_to"
MOVE_TO ::= "move_to"

<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
<letter> ::= "a" | "b" | "c" | ... | "z" | "A" | "B" | "C" | ... | "Z"
